--- a/en.html
+++ b/en.html
@@ -45,7 +45,7 @@
 -->
                     <!-- Language Switcher -->
                     <div class="nav-actions">
-                        <a href="Indexsk.html" class="lang-btn">SK</a>
+                        <a href="Index.html" class="lang-btn">SK</a>
                         <a href="en.html" class="lang-btn active">EN</a>
                     </div>
 
