--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
 
                     <!-- Language Switcher -->
                     <div class="nav-actions">
-                        <a href="indexsk.html" class="lang-btn active">SK</a>
+                        <a href="index.html" class="lang-btn active">SK</a>
                         <a href="en.html" class="lang-btn">EN</a>
                     </div>
 
